<resources>
    <string name="app_name">InfoCiclos</string>
    <string name="activity_main_log_in">Log in</string>
    <string name="activity_main_sign_up">Sign up</string>
    <string name="generic_form_username">Username</string>
    <string name="generic_form_password">Password</string>
    <string name="generic_form_grade">Course</string>
    <string name="form_time_morning">Morning</string>
    <string name="form_time_afternoon">Afternoon</string>
    <string name="generic_form_partial_time">Partial Time</string>
    <string name="generic_form_full_time">Full Time</string>
    <string name="main_menu_item_profile">Profile</string>
    <string name="main_menu_item_log_out">Log Out</string>
    <string name="activity_main_onboarding_text">Welcome</string>
    <string name="activity_main_menu_lista">List</string>
    <string name="activity_main_menu_grid">Grid</string>
    <string name="activity_main_menu_spinner">Spinner</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="generic_return">Return</string>
    <string name="fill_credentials_generic">Please fill all the Fields</string>
</resources>