<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <LinearLayout
        android:id="@+id/log_in_form_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:textSize="20sp"
            android:id="@+id/activity_log_in_username_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/generic_form_username"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:textSize="20sp"
            android:id="@+id/activity_log_in_password_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/generic_form_password"
            android:inputType="numberPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_log_in_log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/log_in_form_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/activity_main_log_in" />

</androidx.constraintlayout.widget.ConstraintLayout>